changed model Anime

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "import/no-extraneous-dependencies": 0,
+        "func-names": 0
     }
 }
